fix: media sidebar styles on mobile

--- a/assets/src/css/admin.scss
+++ b/assets/src/css/admin.scss
@@ -1,6 +1,5 @@
 
 @use './variables';
-
 @import url(https://vjs.zencdn.net/8.3.0/video-js.css);
 @import "_common"; // stylelint-disable-line scss/load-no-partial-leading-underscore
 
@@ -14,6 +13,7 @@ $LIGHT_BLUE: #2196F3;
 }
 
 #wpbody-content {
+	/* stylelint-disable-next-line value-keyword-case */
 	container: wpBodyContent / inline-size;
 }
 
@@ -115,6 +115,29 @@ $media-frame-width: calc(300px + 2 * 24px);
 	.media-frame-content {
 		left: 0;
 	}
+}
+
+/**
+* CSS for custom filtering options for the media library.
+*/
+#media-date-range-filter {
+	display: inline-block;
+	margin: 0 10px 0 0;
+	margin-right: auto;
+	font-size: 14px;
+	line-height: 2;
+	color: #2c3338;
+	box-shadow: none;
+	padding: 0 24px 0 8px;
+	min-height: 30px;
+	max-width: 8rem;
+	border: 1px solid #A3A3A3;
+	vertical-align: middle;
+}
+
+.media-modal-content #media-date-range-filter {
+	vertical-align: bottom;
+	margin: 12px 0;
 }
 
 /**
@@ -262,6 +285,17 @@ $media-frame-width: calc(300px + 2 * 24px);
 				top: 240px;
 			}
 		}
+
+		@media (max-width: 640px) {
+
+			.media-toolbar {
+				width: calc(100% - 64px);
+			}
+
+			.attachments-wrapper {
+				width: calc(100% - 48px);
+			}
+		}
 	}
 
 	.edit-attachment-frame {
@@ -322,29 +356,6 @@ $media-frame-width: calc(300px + 2 * 24px);
 	label {
 		white-space: nowrap;
 	}
-}
-
-/**
-* CSS for custom filtering options for the media library.
-*/
-#media-date-range-filter {
-	display: inline-block;
-	margin: 0 10px 0 0;
-	margin-right: auto;
-	font-size: 14px;
-	line-height: 2;
-	color: #2c3338;
-	box-shadow: none;
-	padding: 0 24px 0 8px;
-	min-height: 30px;
-	max-width: 8rem;
-	border: 1px solid #A3A3A3;
-	vertical-align: middle;
-}
-
-.media-modal-content #media-date-range-filter {
-	vertical-align: bottom;
-	margin: 12px 0;
 }
 
 #media-attachment-date-filters,
