--- a/pages/media-library/index.scss
+++ b/pages/media-library/index.scss
@@ -208,5 +208,8 @@
 	.media-menu {
 		background: #FFF;
 		z-index: -1;
+		top: 0;
+		max-width: 100%;
+		width: 100%;
 	}
 }
